more static analysis